--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,6 @@ html.lenis body {
 }
 
 body {
-  background: #1d242e;
   font-family: "Poppins", sans-serif;
 }
 
@@ -246,8 +245,6 @@ body {
   );
 }
 
-
-
 .swiper-gallery .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -280,11 +277,11 @@ body {
 }
 
 .ball:nth-child(odd) {
-    color: #006D5B;
+  color: #006d5b;
 }
 
 .ball:nth-child(even) {
-    color: #FF6F61;
+  color: #ff6f61;
 }
 
 /* Using a custom attribute for variability */
@@ -351,4 +348,9 @@ body {
   animation-delay: -28s;
   transform-origin: 25vw -3vh;
   box-shadow: 40vmin 0 5.196265905749415vmin currentColor;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #55e00b !important; /* your desired color */
 }
