--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,6 +85,13 @@ body {
   );
 }
 
+.bg-image{
+   background-image: url('/images_cus/bg/image-home.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;         /* 🔹 Makes it cover the entire area */
+  background-position: center;    /* 🔹 Keeps the image centered */
+}
+
 .cus-videos {
   background: #0f6939;
   background: linear-gradient(
@@ -104,11 +111,31 @@ body {
   transform: rotate(0deg) translate(-50%, -50%);
   background: conic-gradient(
     transparent 0deg,
-    rgb(17, 255, 0) 90deg,
+    #467cc1 90deg,
     transparent 90deg,
     transparent 180deg,
     transparent 180deg,
-    rgb(17, 255, 0) 270deg,
+    #467cc1 270deg,
+    transparent 270deg
+  );
+  animation: rotate 8s infinite linear;
+}
+
+.conic-rotate {
+  width: 250%;
+  height: 350%;
+  position: absolute;
+  z-index: 0;
+  top: 50%;
+  left: 50%;
+  transform: rotate(0deg) translate(-50%, -50%);
+  background: conic-gradient(
+    transparent 0deg,
+    #467cc1 90deg,
+    transparent 90deg,
+    transparent 180deg,
+    transparent 180deg,
+    #467cc1 270deg,
     transparent 270deg
   );
   animation: rotate 8s infinite linear;
@@ -123,6 +150,19 @@ body {
     transform: translate(-50%, -50%) rotate(360deg);
   }
 }
+
+.profile-image{
+  background: conic-gradient(
+    transparent 0deg,
+    transparent 90deg,
+    #467cc1 90deg,
+    #467cc1 180deg,
+    transparent 180deg,
+    transparent 270deg,
+    #467cc1 270deg
+  );
+}
+
 
 .cus-career {
   background: #0f6939;
@@ -157,12 +197,12 @@ body {
 
 /* Optional: glow for the button itself */
 .shadow-glow {
-  box-shadow: 0 0 10px #55e00b91, 0 0 20px #55e00b;
+  box-shadow: 0 0 10px #467cc1, 0 0 20px #467cc1;
   transition: box-shadow 0.3s ease-in-out;
 }
 
 .shadow-glow:hover {
-  box-shadow: 0 0 20px #55e00b, 0 0 40px #55e00b;
+  box-shadow: 0 0 20px #467cc1, 0 0 40px #467cc1;
 }
 
 .admin-sidebar-menu:hover {
@@ -352,7 +392,22 @@ body {
 
 .swiper-button-next,
 .swiper-button-prev {
-  color: #55e00b !important; /* your desired color */
+  color: #467cc1 !important;
+  /* color: black !important; */
+}
+
+@keyframes moveGradient {
+   0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
+}
+
+.animate-gradientMove {
+  background-size: 200% 100%;
+  animation: gradientMove 3s linear infinite;
 }
 
 @media screen and (max-width: 768px) {
